crates/obzenflow_core/tests/compile_fail/stage_output_carrier_cannot_be_typed_payload.stderr
error[E0119]: conflicting implementations of trait `TypedFactSet` for type `WrapperAttempt`
  --> tests/compile_fail/stage_output_carrier_cannot_be_typed_payload.rs:20:48
   |
20 | #[derive(Debug, Clone, Serialize, Deserialize, StageOutputFacts)]
   |                                                ^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `obzenflow_core`:
           - impl<T> TypedFactSet for T
             where T: TypedPayload, T: Send, T: Sync, T: 'static;
   = note: this error originates in the derive macro `StageOutputFacts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `StageFactSet` for type `WrapperAttempt`
  --> tests/compile_fail/stage_output_carrier_cannot_be_typed_payload.rs:20:48
   |
20 | #[derive(Debug, Clone, Serialize, Deserialize, StageOutputFacts)]
   |                                                ^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `obzenflow_core`:
           - impl<T> StageFactSet for T
             where T: TypedPayload, T: Send, T: Sync, T: 'static;
   = note: this error originates in the derive macro `StageOutputFacts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `OneFactStageOutput` for type `WrapperAttempt`
  --> tests/compile_fail/stage_output_carrier_cannot_be_typed_payload.rs:20:48
   |
20 | #[derive(Debug, Clone, Serialize, Deserialize, StageOutputFacts)]
   |                                                ^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `obzenflow_core`:
           - impl<T> OneFactStageOutput for T
             where T: TypedPayload, T: Send, T: Sync, T: 'static;
   = note: this error originates in the derive macro `StageOutputFacts` (in Nightly builds, run with -Z macro-backtrace for more info)
